@@ -1,7 +1,8 @@
 Revision history for Github-Backup
 
 1.05 UNREL
-    -
+    - Fix POD escape greater-than issues
+    - Update copyright to 2021
 
 1.04    2021-11-14
     - We now save open and closed tickets. Open are in backup/issues/repo/open
